[tool.poetry]
name = "takehome"
version = "0.1.0"
description = ""
authors = ["Benjamin Pick <bendavidpick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
pydantic = "^2.7.1"
psycopg2 = "^2.9.9"
pyright = "^1.1.360"
pytest = "^8.2.0"
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
